--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="charcoal_gray">#3A3F47</color>
     <color name="light_brownish_green">#ECECEC</color>
     <color name="dark_slate_gray">#92929D</color>
+    <color name="vivid_orange">#FF8700</color>
 </resources>
