--- a/app/src/main/res/layout/item_watchlist.xml
+++ b/app/src/main/res/layout/item_watchlist.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="12dp"
@@ -102,7 +103,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate"
                 app:runtimeFormat="@{movie.runtime}"
                 tools:text="139 minutes" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
