--- a/app/src/main/res/layout/fragment_watch_list.xml
+++ b/app/src/main/res/layout/fragment_watch_list.xml
@@ -55,19 +55,26 @@
             app:layout_constraintStart_toEndOf="@+id/tvTitle"
             app:layout_constraintTop_toTopOf="@+id/tvTitle" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvMovies"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefresh"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="36dp"
-            app:listWatchlist="@{viewModel.movies}"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@+id/ivBack"
-            tools:listitem="@layout/item_watchlist" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivBack">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvMovies"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:listWatchlist="@{viewModel.movies}"
+                tools:listitem="@layout/item_watchlist" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
