--- a/app/src/main/res/anim/from_right.xml
+++ b/app/src/main/res/anim/from_right.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:duration="300"
+        android:duration="800"
         android:fromXDelta="100%"
-        android:toXDelta="0%" />
+        android:fromYDelta="0%" />
+
+    <alpha
+        android:duration="1000"
+        android:fromAlpha="0"
+        android:toAlpha="1" />
 </set>
