--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/dark_navy_blue"
-        tools:context=".main.MainActivity">
+        tools:context=".screens.MainActivity">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/navHostFragment"
