--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,7 +31,6 @@
             app:layout_constraintStart_toEndOf="@id/leftGuideLine"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvTrendingMoviesToday"
             android:layout_width="0dp"
@@ -43,7 +42,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/leftGuideLine"
             app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
-            app:listData="@{viewModel.trendingMovieDay}"
+            app:listData="@{viewModel.trendingMovieDay.data}"
             tools:itemCount="16"
             tools:listitem="@layout/item_movie" />
 
@@ -56,7 +55,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/leftGuideLine"
             app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
-            app:shimmer="@{viewModel.status}">
+            app:shimmer="@{viewModel.trendingMovieDay.status}">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -64,9 +63,8 @@
                 android:orientation="horizontal">
 
                 <include layout="@layout/item_movie_shimmer" />
-
                 <include layout="@layout/item_movie_shimmer" />
-
+                <include layout="@layout/item_movie_shimmer" />
                 <include layout="@layout/item_movie_shimmer" />
             </LinearLayout>
 
