--- a/app/src/main/res/layout/fragment_watch_list.xml
+++ b/app/src/main/res/layout/fragment_watch_list.xml
@@ -57,17 +57,18 @@
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefresh"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="36dp"
+            android:layout_marginHorizontal="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivBack">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvMovies"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layoutAnimation="@anim/layout_animation_left_to_right"
                 android:layout_height="0dp"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
