--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/splashFragment">
 
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.son.movie.screens.splash.SplashFragment"
+        android:label="fragment_splash"
+        tools:layout="@layout/fragment_splash">
+        <action
+            android:id="@+id/action_splashFragment_to_firstFragment"
+            app:destination="@id/firstFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/watchListFragment"
+        android:name="com.son.movie.screens.watchlist.WatchListFragment"
+        android:label="fragment_watch_list"
+        tools:layout="@layout/fragment_watch_list">
+        <action
+            android:id="@+id/action_watchListFragment_to_detailFragment"
+            app:destination="@id/detailFragment"
+            app:enterAnim="@anim/from_bottom"
+            app:popExitAnim="@anim/to_bottom" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.son.movie.screens.home.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_detailFragment"
             app:destination="@id/detailFragment"
@@ -18,19 +41,10 @@
 
     </fragment>
     <fragment
-        android:id="@+id/detailFragment"
-        android:name="com.son.movie.screens.detail.DetailFragment"
-        android:label="Movie Details"
-        tools:layout="@layout/fragment_detail" >
-        <argument
-            android:name="movieId"
-            app:argType="integer" />
-    </fragment>
-    <fragment
         android:id="@+id/searchFragment"
         android:name="com.son.movie.screens.search.SearchFragment"
         android:label="Search Movie"
-        tools:layout="@layout/fragment_search" >
+        tools:layout="@layout/fragment_search">
         <argument
             android:name="query"
             app:argType="string" />
@@ -41,14 +55,23 @@
             app:popExitAnim="@anim/to_bottom" />
     </fragment>
     <fragment
-        android:id="@+id/watchListFragment"
-        android:name="com.son.movie.screens.watchlist.WatchListFragment"
-        android:label="fragment_watch_list"
-        tools:layout="@layout/fragment_watch_list" >
+        android:id="@+id/detailFragment"
+        android:name="com.son.movie.screens.detail.DetailFragment"
+        android:label="Movie Details"
+        tools:layout="@layout/fragment_detail">
+        <argument
+            android:name="movieId"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/firstFragment"
+        android:name="com.son.movie.screens.first.FirstFragment"
+        android:label="fragment_first"
+        tools:layout="@layout/fragment_first" >
         <action
-            android:id="@+id/action_watchListFragment_to_detailFragment"
-            app:destination="@id/detailFragment"
-            app:enterAnim="@anim/from_bottom"
-            app:popExitAnim="@anim/to_bottom" />
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/firstFragment"
+            android:id="@+id/action_firstFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
